# fetra

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
fetra/: Cargo.toml  build.rs
fetra-common/: Cargo.toml
fetra-common/src/: lib.rs
fetra-ebpf/: Cargo.toml
fetra-ebpf/src/: bindings.rs  d_path.rs  event_ext.rs  ext.rs  helpers.rs  lib.rs  macros.rs  main.rs
fetra-ebpf/src/bindings/: common.rs  mod.rs  pageflags.rs
fetra-ebpf/src/handler/: filemap_fault.rs  mod.rs  vfs_read.rs  vfs_readv.rs  vfs_write.rs  vfs_writev.rs
fetra/src/: ext.rs  init.rs  main.rs
fetra/src/process/: aggregator.rs  event_ext.rs  ext.rs  mod.rs
fetra/src/types/: fs_type.rs  mod.rs  mode.rs
