[workspace]
resolver = "2"
members = [
    "fetra",
    "fetra-common",
    "fetra-ebpf",
]
default-members = ["fetra", "fetra-common"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
thiserror = "2.0.12"
which = { version = "6.0.0", default-features = false }

bytemuck = { version = "1.22.0", features = ["derive"] }

bindgen = { version = "0.71.1", features = ["default"] }
nix = "0.30.1"
moka = "0.12.10"
bitflags = "2.9.0"
linux-raw-sys = "0.9.4"
num_enum = { version = "0.7.3", features = ["std"] }
strum = "0.27"
strum_macros = "0.27"
tracing-subscriber = "0.3.19"
metrics-exporter-prometheus = "0.17.0"
metrics-util = "0.19.1"
metrics = "0.24.2"


[profile.release.package.fetra-ebpf]
debug = 2
codegen-units = 1
