[package]
name = "fetra-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
fetra-common = { path = "../fetra-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
bytemuck.workspace = true
log = "0.4.27"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fetra"
path = "src/main.rs"
